--- a/src/main/webapp/pages/depSalud/medicina/consultaMedica.xhtml
+++ b/src/main/webapp/pages/depSalud/medicina/consultaMedica.xhtml
@@ -135,7 +135,7 @@
                         </div>
                     </p:tab>                 
                     <c:forEach items="#{ui.getProperties(consultaMedicaHome.instance)}" var="f" >                                            
-                        <p:tab title="#{f.label}" titletip="#{f.helpInline}" closable="false" rendered="#{!account.tienePermiso('ENFERMEROS')}" titleStyleClass="clearfix">
+                        <p:tab title="#{f.label}" titletip="#{f.helpInline}" closable="false" rendered="#{!account.tienePermiso('ENFERMEROS')}" >
                             <c:choose>
                                 <c:when test="#{f.type == 'edu.sgssalud.model.Structure'}">                                
                                     <ui:repeat value="#{consultaMedicaHome.instance.findBussinesEntityAttribute(f.name)}" var="a" varStatus="status">                                        
@@ -178,14 +178,14 @@
                                             </div>
                                         </h:panelGroup> 
                                     </ui:repeat>
-                                    <br/><br/>                                    
-                                    <div class="span14" style="padding-top: 10px;">                                
+                                    <br/>                                   
+                                    <div style="width: 95%; margin-top: 5%; ">                                
                                         <c:choose>                                                                             
                                             <c:when test="#{(f.name eq 'revisionOrganosYSistemasCM')}">                                                            
                                                 <h:panelGroup id="obraosp" layout="block" class="clearfix">
                                                     <label for="observ1">#{messages['consultaMedica.observacionActOrgySist']}</label>
                                                     <div class="input">
-                                                        <p:inputTextarea id="observ1" value="#{consultaMedicaHome.instance.observacionRevisionOS}" styleClass="xLarge span6" required="false" style="width: 650px; height: 90px;" 
+                                                        <p:inputTextarea id="observ1" value="#{consultaMedicaHome.instance.observacionRevisionOS}" styleClass="xLarge " required="false" style="width: 70%; height: 90px;" 
                                                                          rendered="true">
                                                             <p:ajax event="blur" update="@parent" partialSubmit="true"/>
                                                         </p:inputTextarea>                                              
@@ -196,7 +196,7 @@
                                                 <h:panelGroup id="obEFP" layout="block" class="clearfix">
                                                     <label for="observ2">#{messages['consultaMedica.observacionExamFis']}</label>
                                                     <div class="input">
-                                                        <p:inputTextarea id="observ2" value="#{consultaMedicaHome.instance.observacionExamenFisico}" styleClass="xLarge span6" required="false" style="width: 650px; height: 90px;" 
+                                                        <p:inputTextarea id="observ2" value="#{consultaMedicaHome.instance.observacionExamenFisico}" required="false" style="width: 70%; height: 90px;" 
                                                                          rendered="true">
                                                             <p:ajax event="blur" update="@parent" partialSubmit="true"/>
                                                         </p:inputTextarea>                                                                                                 
@@ -211,23 +211,23 @@
                     </c:forEach>
                     <p:tab title="#{messages['comun.Indicadores']}" titletip="#{messages['comun.Indicadores.Title']}" rendered="true" >
                         <p:panel header="Indice Masa Corpal IMC" styleClass="offset 2">
-                            <h:outputText value="#{consultaMedicaHome.inidicadirIMC}">                                
+                            <h:outputText value="#{consultaMedicaHome.inidicadorIMC}">                                
                             </h:outputText>
                             <br/>
-                            <br/>
+                            <br/>                            
                             <p:lineChart id="linear" value="#{consultaMedicaHome.linearModel}" legendPosition="e"  
-                                         title="IMC" minY="0" maxY="40" style="height:200px"/>  
-                        </p:panel>            
+                                         title="IMC" minY="0" maxY="40" style="height: 180px; width: 90%"/>                              
+                        </p:panel>
                     </p:tab>
                 </p:tabView>             
                 <p:tabView >
                     <p:tab title="#{messages['consultaMedica.Motivo']}" titletip="#{messages['consultaMedica.Motivo']}" rendered="true" >
-                        <glue:output id="motivoC" name="motivoC" type="textarea" label="#{messages['consultaMedica.motivo']}" value="#{consultaMedicaHome.instance.motivoConsulta}" 
-                                     required="false" execute="@this :form:save" render="motivoC" styleClass="span13"/>                
+                        <glue:input id="motivoC" name="motivoC" type="textarea" label="#{messages['consultaMedica.motivo']}" value="#{consultaMedicaHome.instance.motivoConsulta}" 
+                                    required="false" execute="@this :form:save" render="motivoC" helpinline=""/>                
                     </p:tab>                    
                     <p:tab title="#{messages['consultaMedica.Enfermedad']}" titletip="#{messages['consultaMedica.Enfermedad.tip']}" closable="false" rendered="true">
-                        <glue:output id="enfermedadAct" name="enfermedadAct" type="textarea" label="#{messages['consultaMedica.enfermedadActual']}" value="#{consultaMedicaHome.instance.enfermedadActual}" 
-                                     required="false" execute="@this :form:save" render="enfermedadAct" styleClass="span13"/>
+                        <glue:input id="enfermedadAct" name="enfermedadAct" type="textarea" label="#{messages['consultaMedica.enfermedadActual']}" value="#{consultaMedicaHome.instance.enfermedadActual}" 
+                                    required="false" execute="@this :form:save" render="enfermedadAct" helpinline=""/>
                     </p:tab>
                     <p:tab title="#{messages['consultaMedica.Diagnostico']}" titletip="#{messages['consultaMedica.Diagnostico']}" closable="false" 
                            rendered="true">
@@ -246,16 +246,16 @@
                                 </p:pickList>                                                                                      
                             </div>
                         </h:panelGroup> 
-                        <glue:output id="diagnostico" name="diagnostico" type="textarea" label="#{messages['consultaMedica.diagnostico']}" value="#{consultaMedicaHome.instance.diagnostico}" 
-                                     required="false" execute="@this :form:save" render="diagnostico" styleClass="span14"/>
+                        <glue:input id="diagnostico" name="diagnostico" type="textarea" label="#{messages['consultaMedica.diagnostico']}" value="#{consultaMedicaHome.instance.diagnostico}" 
+                                    required="false" execute="@this :form:save" render="diagnostico" helpinline=""/>
                     </p:tab>
                     <p:tab title="#{messages['tratamiento.Nombre']}" titletip="#{messages['tratamiento.Nombre']}" closable="false" rendered="true">                           
-                        <glue:output id="tratamiento" name="tratamiento" type="textarea" label="#{messages['consultaMedica.Tratamiento']}" value="#{consultaMedicaHome.instance.tratamiento}" 
-                                     required="false" execute="@this :form:save" render="tratamiento" styleClass="span14"/>
+                        <glue:input id="tratamiento" name="tratamiento" type="textarea" label="#{messages['consultaMedica.Tratamiento']}" value="#{consultaMedicaHome.instance.tratamiento}" 
+                                    required="false" execute="@this :form:save" render="tratamiento" helpinline=""/>
                     </p:tab>
                     <p:tab title="#{messages['consultaMedica.Observacion']}" titletip="#{messages['consultaMedica.Observacion']}" closable="false" rendered="true">
-                        <glue:output id="observacionC" name="observacionC" type="textarea" label="#{messages['consultaMedica.observacionC']}" value="#{consultaMedicaHome.instance.observacionConsulta}" 
-                                     required="false" execute="@this :form:save" render="observacionC" styleClass="span14"/>
+                        <glue:input id="observacionC" name="observacionC" type="textarea" label="#{messages['consultaMedica.observacionC']}" value="#{consultaMedicaHome.instance.observacionConsulta}" 
+                                    required="false" execute="@this :form:save" render="observacionC" helpinline=""/>
                     </p:tab>
                 </p:tabView>
                 <p:tabView  rendered="#{consultaMedicaHome.instance.persistent}">
