--- a/src/main/webapp/pages/secretaria/lista.xhtml
+++ b/src/main/webapp/pages/secretaria/lista.xhtml
@@ -109,6 +109,20 @@
                     <h:outputText value="#{paciente_.email}" />
                 </p:column>
             </p:dataTable>
+            <h:panelGrid id="export" class="columns" >
+                <p:panel>
+                    <h:outputText value="Exportar Datos" />  
+                    <br/>
+                    <h:commandLink action="#{reporteListas.renderPacientes()}" >                    
+                        <p:graphicImage value="/resources/images/pdf.png" />                          
+                    </h:commandLink>
+                    #{''}
+                    <h:commandLink >  
+                        <p:graphicImage value="/resources/images/xls1.png" />  
+                        <p:dataExporter type="xls" target="tablaPacientes" fileName="pacientes"/>  
+                    </h:commandLink>
+                </p:panel>
+            </h:panelGrid>
         </h:form>
     </ui:define>
 </ui:composition>
