--- a/src/main/webapp/pages/farmacia/receta/listaReceta.xhtml
+++ b/src/main/webapp/pages/farmacia/receta/listaReceta.xhtml
@@ -61,7 +61,7 @@
                             <p:ajax event="keyup" update="tablaRecetas"/>
                         </p:inputText>
                         &nbsp;
-                        <p:commandButton value="Buscar" action="#{recetaListaServicio.BuscarRecetasPorParametro()}" update="tablaRecetas" styleClass="btn info"/>                    
+                        <p:commandButton value="Buscar" action="#{recetaListaServicio.buscarPorParametro()}" update="tablaRecetas" styleClass="btn info"/>                    
                     </div>
                 </div>
 
@@ -87,23 +87,23 @@
                         </f:facet>  
                         <h:outputText value="#{receta_.id}" />                        
                     </p:column>
-                    <p:column sortBy="#{receta_.nombres}" style="text-align: center;">
+                    <p:column sortBy="#{receta_.paciente.nombres}" style="text-align: center;">
                         <f:facet name="header">  
                             <h:outputText value="#{messages['common.firstname']}" />  
                         </f:facet> 
-                        <h:outputText value="#{receta_.nombres}" />
+                        <h:outputText value="#{receta_.paciente.nombres}" />
                     </p:column>
-                    <p:column sortBy="#{receta_.apellidos}" style="text-align: center;">
+                    <p:column sortBy="#{receta_.paciente.apellidos}" style="text-align: center;">
                         <f:facet name="header">  
                             <h:outputText value="#{messages['common.surname']}" />  
                         </f:facet> 
-                        <h:outputText value="#{receta_.apellidos}" />
+                        <h:outputText value="#{receta_.paciente.apellidos}" />
                     </p:column>
-                    <p:column sortBy="#{receta_.fechaEmision}" style="text-align: center;">
+                    <p:column sortBy="#{receta_.fecha}" style="text-align: center;">
                         <f:facet name="header">  
                             <h:outputText value="#{messages['fechaReceta.fechaEmision']}" />  
                         </f:facet> 
-                        <h:outputText value="#{receta_.fechaEmision}" />
+                        <h:outputText value="#{receta_.fecha}" />
                     </p:column>
 
                     <p:column sortBy="#{receta_.responsableEmision}" style="text-align: center;">
