--- a/src/main/webapp/pages/depSalud/medicina/listaConsultas.xhtml
+++ b/src/main/webapp/pages/depSalud/medicina/listaConsultas.xhtml
@@ -88,11 +88,11 @@
                     </f:facet> 
                     <h:outputText value="#{consultaMedica_.id}" />
                 </p:column>
-                 <p:column sortBy="#{consultaMedica_.historiaClinica.fichaMedica.id}" style="text-align: center;">
+                <p:column sortBy="#{consultaMedica_.historiaClinica.fichaMedica.numeroFicha}" style="text-align: center;">
                     <f:facet name="header">  
-                        <h:outputText value="#{messages['fichaMedica.id']}" />  
+                        <h:outputText value="#{messages['fichaMedica.numero']}" />  
                     </f:facet> 
-                    <h:outputText value="#{consultaMedica_.historiaClinica.fichaMedica.id}" />
+                    <h:outputText value="#{consultaMedica_.historiaClinica.fichaMedica.numeroFicha}" />
                 </p:column>
                 <p:column sortBy="#{consultaMedica_.historiaClinica.fichaMedica.paciente.nombres}" style="text-align: center;">
                     <f:facet name="header">  
@@ -110,7 +110,10 @@
                     <f:facet name="header">  
                         <h:outputText value="#{messages['consultaMedica.fechaConsulta']}" />  
                     </f:facet> 
-                    <h:outputText value="#{consultaMedica_.fechaConsulta}" />
+                    <h:outputText value="#{consultaMedica_.fechaConsulta}">
+                        <f:convertDateTime locale="es" pattern="dd-MMM-yyyy"/>
+                    </h:outputText>
+                    
                 </p:column>
                 <p:column sortBy="#{consultaMedica_.responsable}" style="text-align: center;">
                     <f:facet name="header">  
@@ -119,6 +122,20 @@
                     <h:outputText value="#{consultaMedica_.responsable}" />
                 </p:column>
             </p:dataTable>
+            <h:panelGrid id="export" class="columns" >
+                <p:panel>
+                    <h:outputText value="Exportar Datos" />  
+                    <br/>
+                    <h:commandLink action="#{reporteListas.renderConsultasMedicas()}" >                    
+                        <p:graphicImage value="/resources/images/pdf.png" />                          
+                    </h:commandLink>
+                    #{''}
+                    <h:commandLink >  
+                        <p:graphicImage value="/resources/images/xls1.png" />  
+                        <p:dataExporter type="xls" target="tablaConsultasMedicas" fileName="ConsultasMedicas"/>  
+                    </h:commandLink>
+                </p:panel>
+            </h:panelGrid>
         </h:form>
     </ui:define>
 </ui:composition>
